# ServiceX_Coffea

./: .gitignore  README.md  setup.cfg  setup.py
notebooks/: DaskAnalysis.ipynb  LocalExample.ipynb
servicex_coffea/: data_source.py  executor.py  local_executor.py
