[metadata]
name = servicex_coffea
url = https://github.com/cloudtools/troposphere
author = Ben Galewsky
author_email = bengal1@illinois.edu
description = Analyze ServiceX Data Using Coffea Tools
long_description = file: README.md
long_description_content_type = text/markdown
license = New BSD license
classifiers =
      Development Status :: 3 - Alpha,
      Intended Audience :: Developers,
      Intended Audience :: Information Technology,
      License :: OSI Approved :: BSD License
      Programming Language :: Python,
      Topic :: Software Development,
      Topic :: Utilities,
      Programming Language :: Python,
      Programming Language :: Python :: 3.6,
      Programming Language :: Python :: 3.7,
      Programming Language :: Python :: 3.8,

project_urls =
    Changelog = https://github.com/cloudtools/troposphere/blob/master/CHANGELOG.md
    Source = https://github.com/cloudtools/troposphere
    Tracker = https://github.com/cloudtools/troposphere/issues

[options]
test_suite = tests
tests_require =
    pytest>=3.9
    pytest-asyncio
    pytest-mock
    pytest-cov
    coverage
    flake8
    codecov

include_package_data = true
install_requires =
    aiostream
    tenacity
    servicex_clients
    coffea
packages =
    servicex_coffea

# typing.Any and typing.NoReturn were added in 3.6.2
python_requires = >=3.6
zip_safe = false

[options.extras_require]
policy = awacs>=0.8

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
